# treatments_manager

./: .gitignore  DEPLOYMENT.md  Dockerfile  GITHUB_INTEGRATION.md  README.md  RENDER_DEPLOYMENT.md  SECURITY.md  build.bat  build.sh  render-build.sh  render.yaml  start-dev.bat  start-dev.ps1  start-dev.sh  start-prod.bat  start-prod.ps1  start-prod.sh
.github/: copilot-instructions.md
backend/: .env.example  Cargo.toml  README.md  patients.db  patients.db-shm  patients.db-wal  test_db_creation.rs  test_env.rs
backend/migrations/: 001_initial.sql  002_add_treatments.sql  003_create_users_table.sql  004_add_patient_active_field.sql  005_update_existing_patients_active.sql  006_make_email_nullable.sql
backend/src/: auth.rs  database.rs  main.rs  middleware.rs  routes.rs
backend/src/handlers/: auth.rs  export_handler.rs  github.rs  mod.rs  patient_handler.rs  treatment_handler.rs
backend/src/models/: github.rs  mod.rs  patient.rs  treatment.rs  user.rs
backend/static/: index.html
backend/static/assets/: index-6dictmP4.js  index-B9HNqiVY.js  index-BN2z48hG.css  index-BQZKdDvI.js  index-BvrjTqwh.js  index-CDf37CIm.css  index-CqUAtRj-.js  index-CrVqyJLB.js  index-Cs0E1gRq.css  index-D3SwQK7k.css  index-D3YdLlN-.js  index-D9crhbgd.js  index-Daa7BrEJ.js  index-DfO29IRf.js  index-sEs619C7.css
frontend/: .env.development  API_CONFIGURATION.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AddPatientPage.css  AddPatientPage.jsx  AddTreatmentPage.css  AddTreatmentPage.jsx  Login.css  (+25 more)
(+5 files in other folders)
