[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
jsonwebtoken = "9.2"
bcrypt = "0.15"
actix-web-httpauth = "0.8"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
actix-files = "0.6"
